syntax = "proto3";

package main;

option go_package = "./proto";

// 添加系统操作日志表
message OperateLog {
  int64 id = 1; //编号
  string title = 2; //系统模块
  string operation_type = 3; //操作类型
  string operation_name = 4; //操作人员
  string request_method = 5; //请求方式
  string operation_url = 6; //操作方法
  string operation_params = 7; //请求参数
  string operation_response = 8; //响应参数
  int32 operation_status = 9; //操作状态
  int64 use_time = 10; //执行时长(毫秒)
  string browser = 11; //浏览器
  string os = 12; //操作信息
  string operation_ip = 13; //操作地址
  string operation_time = 14; //操作时间
}

message AddOperateLogReq {
  string title = 1; //系统模块
  string operation_type = 2; //操作类型
  string operation_name = 3; //操作人员
  string request_method = 4; //请求方式
  string operation_url = 5; //操作方法
  string operation_params = 6; //请求参数
  string operation_response = 7; //响应参数
  int32 operation_status = 8; //操作状态
  int64 use_time = 9;
  string browser = 10;
  string os = 11;
  string operation_ip = 12;
  string operation_time = 13;
}

message AddOperateLogResp {
  string pong = 1;
}

// 删除系统操作日志表
message DeleteOperateLogReq {
  repeated int64 ids = 1;
}

message DeleteOperateLogResp {
  string pong = 1;
}

// 查询系统操作日志表详情
message QueryOperateLogDetailReq {
  int64 id = 1;
}

// 分页查询系统操作日志表列表
message QueryOperateLogListReq {
  PageRequest page_request = 1;
  string operation_ip = 2; //操作地址
  string operation_name = 3; //操作人员
  int32 operation_status = 4; //操作状态
  string operation_type = 5; //操作类型
  string operation_url = 6; //操作方法
  string title = 7; //系统模块
  string os = 8; //操作系统信息
  string browser = 9; //浏览器
  string request_method = 10; //请求方式
}

message OperateLogListData {
    PageResponse page_response = 1;
    repeated OperateLog data = 2;
}

// 系统操作日志表
service OperateLogService {
  // 添加系统操作日志表
  rpc AddOperateLog(AddOperateLogReq) returns (AddOperateLogResp){}
  // 删除系统操作日志表
  rpc DeleteOperateLog(DeleteOperateLogReq) returns (DeleteOperateLogResp){}
  // 查询系统操作日志表详情
  rpc QueryOperateLogDetail(QueryOperateLogDetailReq) returns (OperateLog){}
  // 查询系统操作日志表列表
  rpc QueryOperateLogList(QueryOperateLogListReq) returns (OperateLogListData){}
}

